--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/react": "^1.0.2",
-    "@emotion/react": "^11.1.2",
+    "@chakra-ui/react": "^1.1.4",
+    "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -15,13 +15,14 @@
     "emotion-theming": "^11.0.0",
     "ethers": "^5.0.23",
     "focus-visible": "^5.2.0",
-    "framer-motion": "^2.9.5",
+    "framer-motion": "^3.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4",
-    "web3": "^1.3.0"
+    "web3": "^1.3.0",
+    "web3-hooks": "^1.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
